# os-workshop.babyos

./: .gitignore  CMakeLists.txt  README.md  babyos.sln  babyos.sublime-project  babyos.vcxproj  babyos.vcxproj.filters  babyos.wpj  debug.cmd  run.cmd  td.cmd
actions/: action.cmd
actions/scripts/run/: autorun.bat
debug/: debug.asm  debug186.asm
docs/: code-style.rtf
examples/hello-world/: hw.asm
examples/randstr/: randstr.asm
examples/runstr/: runstr.asm
examples/worm/: worm.asm
process-manager/: clock.asm  clock.c  clock.h  clock186.asm  clock86.asm  common.h  context.asm  context.c  context.h  context186.asm  context86.asm  interrupts.asm  interrupts186.asm  interrupts86.asm  mocks186.asm  mocks186.h  pm.c  process-manager.c  process-manager.h  process.h  registers.h  registers186.h  syscalls.h  syscalls186.asm
src/cpuid/: cpuid.c
src/debug/: debug.asm  debug.h
src/include/: common.h  processes.h
src/libraries/: processes.c
src/process-manager/: architecture-186.h  architecture-x86-32.h  architecture.h  clock.c  clock.h  clocka.asm  common.h  context.c  context.h  interrupts.asm  interrupts.c  interrupts.h  memory.c  memory.h  mocks.c  mocks.h  mocks186.asm  mocks186.h  process-manager.c  process-manager.h  process-pool.c  process-pool.h  process-queue.c  process-queue.h  process-storage.c  process-storage.h  process.c  process.h  processes.h  registers.h  registers186.h  syscalls.asm  syscalls.c  syscalls.h  timer.c  timer.h
targets/: cpuid.tgt  hw.tgt  kernel.tgt  pm.tgt  randstr.tgt  runstr.tgt  worm.tgt
tools/: action.cmd
(+8 files in other folders)
